tugas-3: fix font not showing, replace to comic neue

--- a/tugas-3/style.css
+++ b/tugas-3/style.css
@@ -2,12 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
 
 body {
     background-color: #0a0a0a;
     color: #e0e0e0;
+    font-family: "Comic Neue", "Comic Sans MS", "Comic Sans", cursive;
 }
 
 header {
